Added selection based on probability